--- a/index.html
+++ b/index.html
@@ -4,30 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/main.js" defer></script>
-    <title>JS</title>
+    <title>Học Web - SCSS Modern Structure</title>
 </head>
 
 <body>
     <div class="app">
+        
         <header class="site-header">
             <div class="container">
-
+                <a href="#" class="logo">HOC-WEB</a>
+                
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="#">Sản phẩm</a></li>
+                        <li><a href="#">Liên hệ</a></li>
+                    </ul>
+                </nav>
             </div>
         </header>
 
         <main class="site-main">
             <div class="container">
-
+                <section class="hero">
+                    <h1>Xin chào Sass hiện đại!</h1>
+                    <p>Đây là website sử dụng cấu trúc @use và @forward.</p>
+                    <a href="#" class="btn">Tìm hiểu thêm</a>
+                </section>
             </div>
         </main>
 
         <footer class="site-footer">
-            <class="container">
+            <div class="container">
+                <p>&copy; 2024 Hoc-Web. All rights reserved.</p>
+            </div>
+        </footer>
 
-    </div>
-    </footer>
     </div>
 </body>
 
